--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     // * Editor Settings
     // "keyboard.dispatch": "keyCode", // Use keyCode this in your user configuration to enable alt keybindings in the terminal
     "editor.formatOnSave": true,
+    //* Python Settings
+    "python.defaultInterpreterPath": "./.venv/bin/python",
     // * Conventional commits settings
     "conventionalCommits.gitmoji": false,
     "conventionalCommits.scopes": [
